--- a/Error404.css
+++ b/Error404.css
@@ -2,6 +2,8 @@ body{
     background-image:url("pfw.jpg");
     background-position:center center;
     font-family: 'Noto Sans TC', sans-serif;
+    height:100vh;
+
 }
 
 .gif{
@@ -12,11 +14,16 @@ body{
 .text{
     border-style:groove;
 border-radius:30px;
-border-color:#6FAE37;
 border-width:10px;
+width: 600px; 
+padding-top:10px;
+padding-bottom:10px;
+border: 3px solid #A0A0A0;
+text-align: center;
+background: #C0C0C0;
 }
 .text:hover{
-    background-color:#FFE000;
+    background-color: coral;
 }
 
 .logo{
@@ -32,10 +39,14 @@ border-width:10px;
 .flag{
     width:70px;
     height:70px;
+    
 }
 
 .titre{
     color:white;
     text-shadow: 5px 5px 5px black;
     font-size: 50px;
+}
+.titre:hover{
+    background-color: blueviolet;
 }
